--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://s14.gifyu.com/images/bHmBS.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>BhuGoal</title>
   </head>
   <body>
     <div id="root"></div>
